<resources>
    <string name="app_name">Easy Money</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="txt_welcome">Welcome <br /> <br /> The Easiest Way <br /> Manage Your Money </string>
    <string name="txt_btn_login">LOGIN</string>
    <string name="txt_btn_signUp">SIGN UP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">User Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_login_title">Login</string>
    <string name="description_back">Back Button image</string>
    <string name="txt_login_subInfo">Please sign in to continue</string>
    <string name="txt_register">Don\'t have an account?</string>
    <string name="btn_register">Sign up</string>
    <string name="prompt_user_name">User name</string>
    <string name="txt_register_title">Create Account</string>
    <string name="txt_register_subInfo">Please fill the input below here</string>
    <string name="txt_btn_next">Next</string>
    <string name="txt_login">Already have an account?</string>
    <string name="btn_login">Sign in</string>
    <string name="hint_monthly_salary">Monthly Salary</string>
    <string name="hint_monthly_saving">Monthly Saving</string>
    <string name="prefix">$</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="group_name"> Group 4 - CSIS3175 Team project</string>
    <string name="app_icon_description">App icon image</string>
    <string name="trackerHeader">Expense Tracker</string>
    <string name="goalHeader">Expense Goal</string>
    <string name="goalPercentage">Percentage</string>
    <string name="goalList">List</string>
    <string name="profileHeader">Profile</string>
    <string name="editProfileBtn">Edit Profile</string>
    <string name="goalEntertainment">Entertainment</string>
    <string name="goalDining">Dining</string>
    <string name="goalGroceries">Groceries</string>
    <string name="goalTransport">Transport</string>
    <string name="goalShopping">Shopping</string>
    <string name="goalOther">Other</string>
    <string name="trackerDAHead">Daily Allowance</string>
    <string name="trackerIncomeHeader">Income</string>
    <string name="trackerSavingsHead">Savings</string>
    <string name="trackerExpenseHead">Latest Expenses</string>
    <string name="trackerAddIncome">Add Income</string>
    <string name="trackerAddSavings">Add Savings</string>
    <string name="trackerAddExpense">Add Expense</string>
    <string name="addDate">Date dd/mm/yyy</string>
    <string name="addAmount">Amount</string>
    <string name="addName">Name</string>
    <string name="addExpenseHead">Add Expense</string>
    <string name="addIncomeHead">Add Income</string>
    <string name="addSavingsHead">Add Savings</string>
    <string name="profileHead">Profile</string>
    <string name="profileFinanceInfo">Financial Information</string>
    <string name="profileIncome">Monthly Income</string>
    <string name="profileSavings">Current Savings</string>
    <string name="profileBills">Recurring Bills</string>
    <string name="profileGoal">Expense Goal</string>
    <string name="profileLogOut">Log Out</string>
    <string name="txtScrNameBE">Big Expense</string>
    <string name="txtBEOption1">Option 1</string>
    <string name="txtBEOption2">Option 2</string>
    <string name="txtBEOption3">Option 3</string>
    <string name="txtBEOptionName1">Cut down expense by</string>
    <string name="txtBEOptionName2">Cut down savings by</string>
    <string name="txtBEOptionName3">Get a loan for</string>
    <string name="txtScrBESub">Set up your expense</string>
    <string name="bigExHint1">Category of big expense</string>
    <string name="bigExHint2">Big Expense Period</string>
    <string name="bigExHint3">Amount of estimated cost</string>
    <string name="bigEx">Edit Profile</string>
    <string name="btnBigEx">SET BIG EXPENSE</string>
    <string-array name="expensePeriod">
        <item>Big expense period</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="image">An image</string>
    <string name="reportHeader">Report</string>
    <string name="reportTotExp">Total Expense</string>
    <string name="reportTotInc">Total Income</string>
    <string name="reportTotSav">Total Saving</string>

    <string name="reportSubHeader">Total balance this month</string>

    <!--Kate's Strings Start-->
    <string name="hint_amount">Amount</string>
    <string name="hint_desc">Description</string>
    <string name="checkbox_recurring">Recurring Expense</string>
    <string name="checkbox_recurringIncome">Recurring Income</string>
    <string name="txt_recurring_bills">Recurring Bills</string>
    <string name="hint_date_expense">Date of expense</string>
    <string name="hint_category_expense">Expense Category</string>
    <string name="hint_category_income">Income Category</string>
    <string name="hint_expense_name">Expense Name</string>
    <string name="btn_add_expense">Add Expense</string>
    <string name="btn_add_recurring_bills">Add Recurring Bills</string>
    <string name="btn_back">Go to previous screen</string>
    <string-array name="categoriesExpense">
        <item>Category</item>
        <item>Entertainment</item>
        <item>Groceries</item>
        <item>Transport</item>
        <item>Shopping</item>
        <item>Dining</item>
        <item>Other</item>
    </string-array>
    <string-array name="categoriesIncome">
        <item>Category</item>
        <item>Work</item>
        <item>Investment</item>
        <item>Loan</item>
        <item>Freelance</item>
        <item>Gift</item>
        <item>Other</item>
    </string-array>
    <string name="txt_update_password_title">Update password</string>
    <string name="txt_update_password_sub">Please update your password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="hint_numOfMonths">Number of months</string>
    <!--Kate's Strings End-->
</resources>
